--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -53,13 +53,13 @@ label{
 	}
 .panel-default > .panel-heading{
 	background: none;
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px dashed #eee;
 }
 .panel-heading{
 	margin-bottom: 10px;
 }
 .panel-body{
-	padding: 10px;
+	padding: 0 10px 10px;
 }
 
 /**
@@ -190,13 +190,39 @@ clr:after,
 /**
  * .post-mixed-list
  */
+.mx-panel .panel-heading{
+	color:#428BCA;
+}
+	.mx-panel-heading .panel-title{
+		float: left;
+	}
+	.mx-panel-heading-extra{
+		float: right;
+	}
+	.mx-panel-heading-extra a{
+		color:#999;
+		font-size: 15px;
+		line-height: 15px;
+		padding:0 .5em;
+	}
+		.mx-panel-heading-extra .nplink{
+			margin-left: 20px;
+		}
+		.mx-panel-heading-extra .nplink a{
+			padding-left: 1em;
+			padding-right: 1em;
+		}
+		.mx-panel-heading-extra .keywords a:hover,
+		.mx-panel-heading-extra .keywords a:active{
+			color:#333;
+		}
 .post-mixed-list-container{
-	padding-left: 5px;
-	padding-right: 5px;
+	padding: 0 5px;
+	margin-top: -10px;
 }
 .post-mixed-list{
-	border-top: 1px solid #eee;
-	margin-top: -1px;
+	border-bottom: 1px solid #eee;
+	padding: 0;
 }
 	.post-mixed-list a{
 		display: block;
@@ -348,6 +374,214 @@ clr:after,
 			color:#b2b2b2;
 			font-size: 12px;
 		}
+label.error{
+	background:#E36532;
+	position:relative;
+	margin-top:10px;
+	padding:5px 10px 5px 8px;
+	color:white;
+	box-shadow:0 1px 3px rgba(0,0,0,.3);
+	border-radius:2px;
+	border-left:4px solid #E36532 ;
+	line-height:1;
+}
+	label.error:after{
+		position:absolute;
+		background:#E36532;
+		width:10px;
+		height:10px;
+		left:10px;
+		top:-5px;
+		z-index:0;
+		content:'';
+		-ms-transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		-moz-transform: rotate(-45deg);	
+		transform: rotate(-45deg);
+		box-shadow:1px -1px 2px rgba(0,0,0,.1);
+	}
+#respond{
+	position: relative;
+	background: #fff;
+	border: 1px solid #E7E7E7;
+	border-bottom-width: 4px;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+	margin-bottom: 10px;
+}
+	#respond:after{
+		position: absolute;
+		background: url(../../../images/min/frontend/rainbow.png);
+		bottom: 0;
+		width: 100%;
+		height: 1px;
+		content:'';
+		border-radius: 4px;
+	}
+	label.error{
+		position: absolute;
+		left: auto;
+		top: 50%;
+		right: 10px;
+		margin-top: -12px;
+		z-index: 10;
+	}
+		label.error:after{
+			left: -9px;
+			top: 7px;
+			box-shadow: none;
+		}
+		label.error[for="comment-form-comment"]{
+			top: 50px;
+			left: 50px;
+			right: auto;
+		}
+		label.error[for="comment-form-comment"]:after{
+			top: -5px;
+			left: 20px;
+		}
+	.comment-list #respond{
+		background: rgb(248,248,248);
+	}
+		.comment-list #reply-title:before,
+		.comment-list #reply-title:after{
+			position:absolute;
+			background: #E6E6E6;
+			width:10px;
+			height:10px;
+			left:20px;
+			top:-5px;
+			z-index:0;
+			content:'';
+			-ms-transform: rotate(-45deg);
+			-webkit-transform: rotate(-45deg);
+			-moz-transform: rotate(-45deg);	
+			transform: rotate(-45deg);
+		}
+		.comment-list #reply-title:after{
+			top: -4px;
+			background:#F8F8F8;
+		}
+	#respond .form-submit{
+		display: none;
+	}
+	.comment-list #reply-title{
+		line-height: 26px;
+	}
+	#reply-title{
+		padding: 10px 15px;
+		margin: 0;
+		border-bottom: 1px dashed #E7E7E7;
+		font-size: 16px;
+	}
+	#reply-title small{
+		float: right;
+		margin-right: -5px;
+	}
+	#commentform{
+		padding: 10px 10px 0;
+	}
+	#commentform .form-group{
+		/*width: 60%;*/
+	}
+	#commentform .input-group-addon{
+		/*width: 15px !important;*/
+	}
+
+/** 
+ * #comments
+ */
+#comments .panel-heading{
+	margin-bottom: 0;
+}
+.comment-list{
+	list-style-type: none;
+	padding-left: 0;
+}
+.comment-list .comment-body{
+	border-bottom:1px dashed #eee;
+	margin-bottom:10px;
+	padding-bottom:10px;
+	
+}
+.comment-list .comment-area-img{
+	float:left;
+	width:40px;
+	height:40px;
+	margin-right:15px;
+}
+	.comment-list .comment-area-img img{
+		border-radius:50%;
+		height: auto;
+	}
+	.comment-list .comment-area-tx{
+		overflow:hidden;
+	}
+	.comment-list .comment-content{
+		margin-bottom:.5rem;
+	}
+		.comment-list .comment-content p{
+			margin:0 0 5px;
+		}
+	.comment-list .comment-meta,
+	.comment-list .comment-meta a{
+		line-height: 22px;
+		color:#b2b2b2;
+	}
+	.comment-list .comment-meta a:hover{
+		text-decoration:underline;
+	}
+	.comment-list .comment-author-name a,
+	.comment-list .comment-meta-data a:hover,
+	.comment-list .comment-meta-data a:active{
+		color:#0c94d7;
+	}
+	.comment-list .comment-meta-data{
+	}
+		.comment-list .comment-meta-data:after{
+			padding:0 5px;
+			content:"-";
+		}
+		.comment-list .comment-meta-data:last-child:after{
+			display:none;
+		}
+	.comment-list .children{
+		padding-left:55px;
+		list-style-type: none;
+	}
+		.comment-list .children .children{
+			padding-left:0;
+		}
+	.comment-list .comment-author-avatar-sm{
+		display:none;
+	}
+	.comment-list .children .comment-area-img{
+		display:none;
+	}
+	.comment-list .children .comment-author-avatar-sm{
+		display:inline-block;
+		width:20px;
+		height:20px;
+		border-radius:50%;
+		margin-right:5px;
+		margin-top: -2px;
+	}
+	.comment-list .comment-author-name{
+		font-weight: bold;
+		color:#428BCA
+	}
+	.comment-list .comment-reply-title{
+		display:block;
+	}
+	.comment-list #respond{
+		margin-left:55px;
+	}
+	.comment-list .children #respond{
+		margin-left:0;
+	}
+.page-tip{
+	margin-bottom: 10px;
+}
 /** 
  * .tip-status
  */
@@ -652,33 +886,9 @@ clr:after,
 /**
  * .homebox
  */
-.homebox .mx-card-header{
-	margin-bottom: 0;
+.homebox .panel-title{
+	line-height: 26px;
 }
-.homebox .mx-card-header > h3{
-	font-weight: bold;
-}
-	.homebox .mx-card-header-extra{
-		line-height: 30px;
-	}
-	.mx-card-body{
-		/*margin: 0;
-		padding: 0;*/
-	}
-	.homebox .post-mixed-list{
-		margin-bottom: 0;
-		padding: 0;
-	}
-	.homebox .mx-card-header-extra .keywords a{
-		color:#999;
-		font-size: 15px;
-		line-height: 15px;
-		padding:0 .5em;
-	}
-		.homebox .mx-card-header-extra .keywords a:hover,
-		.homebox .mx-card-header-extra .keywords a:active{
-			color:#333;
-		}
 /**
  * crumb
  * 
@@ -742,6 +952,7 @@ clr:after,
 	.singluar-post .post-footer{
 		color: #999;
 		line-height: 25px;
+		border-top: 1px solid rgba(0,0,0,.05);
 	}
 	.singluar-post .post-tags{
 		padding: 0 15px;
