--- a/static/css/src/modules/bootstrap-theme.css
+++ b/static/css/src/modules/bootstrap-theme.css
@@ -1380,10 +1380,10 @@ a.bg-warning:hover {
   background-color: #e76b00;
 }
 .bg-danger {
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 a.bg-danger:hover {
-  background-color: #ff1103;
+  background-color: #D7551E;
 }
 .page-header {
   padding-bottom: 9px;
@@ -2408,14 +2408,14 @@ table th[class*="col-"] {
 .table > thead > tr.danger > th,
 .table > tbody > tr.danger > th,
 .table > tfoot > tr.danger > th {
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 .table-hover > tbody > tr > td.danger:hover,
 .table-hover > tbody > tr > th.danger:hover,
 .table-hover > tbody > tr.danger:hover > td,
 .table-hover > tbody > tr:hover > .danger,
 .table-hover > tbody > tr.danger:hover > th {
-  background-color: #ff291c;
+  background-color: #BE4B1B;
 }
 .table-responsive {
   overflow-x: auto;
@@ -2601,7 +2601,7 @@ input[type="search"] {
   }
 }
 .form-group {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .radio,
 .checkbox {
@@ -2859,7 +2859,7 @@ select[multiple].form-group-lg .form-control {
 .has-error .input-group-addon {
   color: #ffffff;
   border-color: #ffffff;
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 .has-error .form-control-feedback {
   color: #ffffff;
@@ -2939,8 +2939,8 @@ select[multiple].form-group-lg .form-control {
   min-height: 28px;
 }
 .form-horizontal .form-group {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 @media (min-width: 768px) {
   .form-horizontal .control-label {
@@ -3243,8 +3243,8 @@ fieldset[disabled] .btn-warning.active {
 }
 .btn-danger {
   color: #ffffff;
-  background-color: #ff4136;
-  border-color: #ff291c;
+  background-color: #E36532;
+  border-color: #D7551E;
 }
 .btn-danger:hover,
 .btn-danger:focus,
@@ -3253,8 +3253,8 @@ fieldset[disabled] .btn-warning.active {
 .btn-danger.active,
 .open > .dropdown-toggle.btn-danger {
   color: #ffffff;
-  background-color: #ff1103;
-  border-color: #de0c00;
+  background-color: #D7551E;
+  border-color: #BE4B1B;
 }
 .btn-danger:active,
 .btn-danger.active,
@@ -3279,11 +3279,11 @@ fieldset[disabled] .btn-danger:active,
 .btn-danger.disabled.active,
 .btn-danger[disabled].active,
 fieldset[disabled] .btn-danger.active {
-  background-color: #ff4136;
-  border-color: #ff291c;
+  background-color: #E36532;
+  border-color: #BE4B1B;
 }
 .btn-danger .badge {
-  color: #ff4136;
+  color: #E36532;
   background-color: #ffffff;
 }
 .btn-link {
@@ -4112,8 +4112,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .container-fluid > .navbar-header,
 .container > .navbar-collapse,
 .container-fluid > .navbar-collapse {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -5px;
+  margin-left: -5px;
 }
 @media (min-width: 768px) {
   .container > .navbar-header,
@@ -4172,13 +4172,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 @media (min-width: 768px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
-    margin-left: -15px;
+    margin-left: -5px;
   }
 }
 .navbar-toggle {
   position: relative;
   float: right;
-  margin-right: 15px;
+  margin-right: 5px;
   padding: 9px 10px;
   margin-top: 8px;
   margin-bottom: 8px;
@@ -4249,8 +4249,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-form {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -5px;
+  margin-right: -5px;
   padding: 10px 15px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
@@ -4784,11 +4784,11 @@ a.label:focus {
   background-color: #e76b00;
 }
 .label-danger {
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 .label-danger[href]:hover,
 .label-danger[href]:focus {
-  background-color: #ff1103;
+  background-color: #D7551E;
 }
 .badge {
   display: inline-block;
@@ -4965,8 +4965,8 @@ a.thumbnail.active {
   color: #e6e6e6;
 }
 .alert-danger {
-  background-color: #ff4136;
-  border-color: #ff1103;
+  background-color: #E36532;
+  border-color: #D7551E;
   color: #ffffff;
 }
 .alert-danger hr {
@@ -5062,7 +5062,7 @@ a.thumbnail.active {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
 }
 .progress-bar-danger {
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 .progress-striped .progress-bar-danger {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5256,7 +5256,7 @@ a.list-group-item-warning.active:focus {
 }
 .list-group-item-danger {
   color: #ffffff;
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 a.list-group-item-danger {
   color: #ffffff;
@@ -5267,7 +5267,7 @@ a.list-group-item-danger .list-group-item-heading {
 a.list-group-item-danger:hover,
 a.list-group-item-danger:focus {
   color: #ffffff;
-  background-color: #ff291c;
+  background-color: #BE4B1B;
 }
 a.list-group-item-danger.active,
 a.list-group-item-danger.active:hover,
@@ -5293,7 +5293,7 @@ a.list-group-item-danger.active:focus {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .panel-body {
-  padding: 15px;
+  padding: 10px;
 }
 .panel-heading {
   padding: 10px 15px;
@@ -5610,14 +5610,14 @@ a.list-group-item-danger.active:focus {
 }
 .panel-danger > .panel-heading {
   color: #ffffff;
-  background-color: #ff4136;
+  background-color: #E36532;
   border-color: transparent;
 }
 .panel-danger > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: transparent;
 }
 .panel-danger > .panel-heading .badge {
-  color: #ff4136;
+  color: #E36532;
   background-color: #ffffff;
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
@@ -6626,8 +6626,8 @@ button.close {
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-group.open .dropdown-toggle.btn-danger {
-  background-color: #ff4136;
-  border-color: #ff291c;
+  background-color: #E36532;
+  border-color: #BE4B1B;
 }
 .btn-group.open .dropdown-toggle {
   -webkit-box-shadow: none;
@@ -6661,7 +6661,7 @@ button.close {
 }
 .text-danger,
 .text-danger:hover {
-  color: #ff4136;
+  color: #E36532;
 }
 .text-warning,
 .text-warning:hover {
@@ -6737,16 +6737,16 @@ label {
 .has-error .help-block,
 .has-error .control-label,
 .has-error .form-control-feedback {
-  color: #ff4136;
+  color: #E36532;
 }
 .has-error .form-control,
 .has-error .form-control:focus {
-  border: 1px solid #ff4136;
+  border: 1px solid #E36532;
   -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.075);
 }
 .has-error .input-group-addon {
-  border: 1px solid #ff4136;
+  border: 1px solid #E36532;
 }
 .has-success .help-block,
 .has-success .control-label,
@@ -6768,12 +6768,10 @@ label {
   border-color: transparent;
 }
 .nav-tabs > li > a {
-  margin-top: 6px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-color: #e7e7e7;
   color: #333333;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 .nav-tabs > li > a:hover,
 .nav-tabs > li > a:focus,
@@ -6783,9 +6781,6 @@ label {
 .nav-tabs .open > a,
 .nav-tabs .open > a:hover,
 .nav-tabs .open > a:focus {
-  padding-top: 13px;
-  padding-bottom: 13px;
-  margin-top: 0;
 }
 .nav-tabs .open > a,
 .nav-tabs .open > a:hover,
@@ -6794,9 +6789,7 @@ label {
 }
 .nav-tabs > li.disabled > a:hover,
 .nav-tabs > li.disabled > a:focus {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  margin-top: 6px;
+
 }
 .dropdown-menu {
   margin-top: 0;
@@ -6920,11 +6913,11 @@ a.list-group-item-warning.active:focus {
   background-color: #ff7701;
 }
 a.list-group-item-danger.active {
-  background-color: #ff4136;
+  background-color: #E36532;
 }
 a.list-group-item-danger.active:hover,
 a.list-group-item-danger.active:focus {
-  background-color: #ff291c;
+  background-color: #BE4B1B;
 }
 .jumbotron {
   border: 1px solid #e7e7e7;
@@ -6933,7 +6926,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel {
   border: 1px solid #e7e7e7;
-  border-width: 0 1px 4px 1px;
+  border-width: 1px 1px 4px 1px;
 }
 .panel-default .close {
   color: #555555;
