--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -59,7 +59,7 @@ label{
 	margin-bottom: 10px;
 }
 .panel-body{
-	padding: 0 10px 10px;
+	padding: 10px;
 }
 
 /**
@@ -732,6 +732,7 @@ label.error{
 }
 	.menu-header-container .navbar{
 		border-radius: 0;
+		margin-bottom: 10px;
 	}
 .menu-header-container .navbar-toggle{
 	float: left;
@@ -1021,6 +1022,39 @@ label.error{
 	box-shadow:0px 1px 1px rgba(0, 0, 0, 0.05);
 	padding-bottom: 0;
 }
+
+
+/**
+ * .widget-author-card
+ */
+	#widget-author-card .media{
+		display: block;
+		padding: 10px;
+		margin: -10px;
+		margin-bottom: 0;
+	}
+		#widget-author-card .media:hover{
+			background: #eee;
+		}
+	#widget-author-card .avatar{
+		width: 100px;
+		height: auto;
+	}
+	#widget-author-card .author-card-name{
+		font-weight: bold;
+		margin-top: 5px;
+	}
+	.author-card-description{
+		color:#666;
+	}
+
+
+
+
+
+
+
+
 @media(min-width: 992px){
 	.mx-navbar-form.collapse{display: block !important;}
 }
