coding user point
Signed-off-by: Km.Van <kmvan.com@gmail.com>

--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -1099,3 +1099,9 @@ label.error{
 @media(min-width: 992px){
 	.mx-navbar-form.collapse{display: block !important;}
 }
+@media(max-width: 767px){
+	.mx-search-btn,
+	.mx-user-btn{
+		float: right;
+	}
+}
